Fix content overflowing on IE
- IE overflows the content when the side paddings are negative (on
narrow windows)

--- a/web/app/style/oppija.less
+++ b/web/app/style/oppija.less
@@ -175,8 +175,8 @@
     opacity: 0;
     left: 0;
     width: 100vw;
-    padding-left: @page-border-width;
-    padding-right: @page-border-width;
+    max-width: @max-content-width;
+    margin: auto;
     padding-top: 8px;
     padding-bottom: 8px;
     background: white;
